@@ -39,152 +39,96 @@ public class DynamicClass {
         return new DynamicClass(javaSourceCode, fullClassName);
     }
 
-
     /**
-     * -cp <目录和 zip/jar 文件的类搜索路径>
-     * -classpath <目录和 zip/jar 文件的类搜索路径>
-     * --class-path <目录和 zip/jar 文件的类搜索路径>
-     * 使用 ; 分隔的, 用于搜索类文件的目录, JAR 档案
-     * 和 ZIP 档案列表。
-     * -p <模块路径>
-     * --module-path <模块路径>...
-     * 用 ; 分隔的目录列表, 每个目录
-     * 都是一个包含模块的目录。
-     * --upgrade-module-path <模块路径>...
-     * 用 ; 分隔的目录列表, 每个目录
-     * 都是一个包含模块的目录, 这些模块
-     * 用于替换运行时映像中的可升级模块
-     * --add-modules <模块名称>[,<模块名称>...]
-     * 除了初始模块之外要解析的根模块。
-     * <模块名称> 还可以为 ALL-DEFAULT, ALL-SYSTEM,
-     * ALL-MODULE-PATH.
-     * --list-modules
-     * 列出可观察模块并退出
-     * -d <module name>
-     * --describe-module <模块名称>
-     * 描述模块并退出
-     * --dry-run     创建 VM 并加载主类, 但不执行 main 方法。
-     * 此 --dry-run 选项对于验证诸如
-     * 模块系统配置这样的命令行选项可能非常有用。
-     * --validate-modules
-     * 验证所有模块并退出
-     * --validate-modules 选项对于查找
-     * 模块路径中模块的冲突及其他错误可能非常有用。
-     * -D<名称>=<值>
-     * 设置系统属性
-     * -verbose:[class|module|gc|jni]
-     * 为给定子系统启用详细输出
-     * -version      将产品版本输出到错误流并退出
-     * --version     将产品版本输出到输出流并退出
-     * -showversion  将产品版本输出到错误流并继续
-     * --show-version
-     * 将产品版本输出到输出流并继续
-     * --show-module-resolution
-     * 在启动过程中显示模块解析输出
-     * -? -h -help
-     * 将此帮助消息输出到错误流
-     * --help        将此帮助消息输出到输出流
-     * -X            将额外选项的帮助输出到错误流
-     * --help-extra  将额外选项的帮助输出到输出流
-     * -ea[:<程序包名称>...|:<类名>]
-     * -enableassertions[:<程序包名称>...|:<类名>]
-     * 按指定的粒度启用断言
-     * -da[:<程序包名称>...|:<类名>]
-     * -disableassertions[:<程序包名称>...|:<类名>]
-     * 按指定的粒度禁用断言
-     * -esa | -enablesystemassertions
-     * 启用系统断言
-     * -dsa | -disablesystemassertions
-     * 禁用系统断言
-     * -agentlib:<库名>[=<选项>]
-     * 加载本机代理库 <库名>, 例如 -agentlib:jdwp
-     * 另请参阅 -agentlib:jdwp=help
-     * -agentpath:<路径名>[=<选项>]
-     * 按完整路径名加载本机代理库
-     * -javaagent:<jar 路径>[=<选项>]
-     * 加载 Java 编程语言代理, 请参阅 java.lang.instrument
-     * -splash:<图像路径>
-     * 使用指定的图像显示启动屏幕
-     * 自动支持和使用 HiDPI 缩放图像
-     * (如果可用)。应始终将未缩放的图像文件名 (例如, image.ext)
-     * 作为参数传递给 -splash 选项。
-     * 将自动选取提供的最合适的缩放
-     * 图像。
-     * 有关详细信息, 请参阅 SplashScreen API 文档
+     * 配置编译选项。
      *
-     * @param options
-     * @return
-     * @argument 文件
-     * 一个或多个包含选项的参数文件
-     * -disable-@files
-     * 阻止进一步扩展参数文件
-     * --enable-preview
-     * 允许类依赖于此发行版的预览功能
-     * 要为长选项指定参数, 可以使用 --<名称>=<值> 或
-     * --<名称> <值>。
+     * 通过此方法可以为动态类的编译过程设置一系列选项，这些选项将以列表的形式提供，并可能影响编译器的行为或生成类的特性。
+     *
+     * 1. -cp 或 -classpath: 指定查找用户类文件和包的位置。
+     * 2. -d: 指定存放生成的类文件的位置。
+     * 3. -sourcepath: 指定查找输入源文件的位置。
+     * 4. -encoding: 指定源文件的字符编码。
+     * 5. -g: 指定是否生成所有调试信息，开关参数。
+     * 6. -g:none: 不生成任何调试信息。
+     * 7. -g:{lines,vars,source}：只生成特定类型的调试信息。
+     * 8. -nowarn: 不生成任何警告信息。
+     * 9. -verbose: 输出有关编译器正在执行的操作的消息。
+     * 10. -deprecation: 输出使用了不推荐使用的类或方法的源位置的警告信息。
+     * 11. -Werror: 将警告当做错误处理。
+     *
+     * @param options 编译选项的列表，每个选项作为一个字符串。
+     * @return 返回DynamicClass的实例，允许链式调用。
      */
     public DynamicClass config(List<String> options) {
-        log.debug("添加编译配置 options：{}", options.stream().collect(Collectors.joining(" ")));
+        // 使用日志记录当前配置的编译选项，以便于调试和跟踪
+        log.debug("添加编译配置 options：{}", String.join(" ", options));
         this.options = options;
         return this;
     }
 
     /**
-     * 编译配置classpath
+     * 向编译器选项中添加类路径。
      *
-     * @param classpath
-     * @return
+     * 通过此方法，可以在编译过程中指定额外的类路径，以便编译器能够找到所需的类和资源。
+     * 这对于处理依赖于外部库或资源的项目尤其有用。
+     *
+     * @param classpath 要添加的类路径，可以是文件系统中的路径或JAR文件的路径。
+     * @return 返回DynamicClass的实例，允许链式调用。
      */
     public DynamicClass addClasspath(String classpath) {
+        // 日志记录添加的类路径，以便于调试和跟踪。
         log.debug("添加编译配置 classpath：{}", classpath);
+        // 将-classpath选项和指定的类路径添加到编译器选项列表中。
         options.add("-classpath");
         options.add(classpath);
+        // 返回当前实例，支持链式调用。
         return this;
     }
 
     /**
-     * 编译Java代码
+     * 动态编译Java源代码。
+     * 使用Java编译器API编译存储在内存中的Java源代码。
+     * 如果编译失败，将抛出LoaderRuntimeException异常。
      *
-     * @return 返回DynamicClass对象
+     * @return DynamicClass 实例，支持方法链式调用。
+     * @throws LoaderRuntimeException 如果编译失败，抛出此异常。
      */
     public DynamicClass compiler() {
+        // 开始编译过程的日志记录
         log.debug("开始执行编译");
-
-        // 获取Java编译器
+        // 获取系统Java编译器
         JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
-
-        // 创建诊断收集器
+        // 创建一个用于收集编译器诊断信息的收集器
         DiagnosticCollector<JavaFileObject> diagnosticCollector = new DiagnosticCollector<>();
-
-        // 创建内存文件管理器
+        // 初始化文件管理器，用于在内存中管理源文件
         this.fileManager = new MemFileManager(compiler.getStandardFileManager(diagnosticCollector, null, null));
-
-        // 创建JavaMemSource对象
+        // 创建一个内存中的Java源文件对象
         JavaMemSource file = new JavaMemSource(fullClassName, javaSourceCode);
-
-        // 创建编译单元Iterable
+        // 将内存中的源文件作为编译单元
         Iterable<? extends JavaFileObject> compilationUnits = Collections.singletonList(file);
-
-        log.debug("获取编译任务");
         // 获取编译任务
+        log.debug("获取编译任务");
         JavaCompiler.CompilationTask task = compiler.getTask(null, fileManager, diagnosticCollector, options, null, compilationUnits);
-
-        log.debug("执行编译");
-        boolean result = task.call();
         // 执行编译任务
+        log.debug("执行编译");
+        // 编译结果
+        boolean result = task.call();
+        // 如果编译失败
         if (!result) {
-            // 处理编译错误
+            // 组合编译错误信息
             String errorMessage = diagnosticCollector.getDiagnostics().stream()
                     .map(Object::toString)
                     .reduce("", (acc, x) -> acc + "\r\n" + x);
+            // 记录编译失败的日志
             log.debug("编译失败: {}", errorMessage);
+            // 抛出编译失败的异常
             throw new LoaderRuntimeException("编译失败: " + errorMessage);
         }
+        // 编译成功的日志记录
         log.debug("编译成功");
+        // 返回当前实例，支持方法链式调用
         return this;
     }
-
-
 
     /**
      * 加载指定类的类对象。
